# gfp-gdal

./: CMakeLists.txt  README.md  gdal_nodes.cpp  gdal_nodes.hpp  geos_nodes.cpp  geos_nodes.hpp  ogr_reader_node.cpp  ogr_writer_node.cpp  postgis_node.cpp  register.hpp
.github/workflows/: build.yml  main.yml  release.yml
